[gd_scene load_steps=18 format=3 uid="uid://b4ebypukt371f"]

[ext_resource type="Script" uid="uid://7tw8uuqfatk6" path="res://player.gd" id="1_4flbx"]
[ext_resource type="AudioStream" uid="uid://hvhfv0vox47l" path="res://Audio/SFX - Death Explosion.ogg" id="2_onrkg"]
[ext_resource type="AudioStream" uid="uid://dj3cau8jau1nf" path="res://Audio/SFX - Success.ogg" id="3_i3pqv"]
[ext_resource type="AudioStream" uid="uid://urcl7qu06h12" path="res://Audio/SFX - Main engine thrust.ogg" id="4_hqtel"]
[ext_resource type="PackedScene" uid="uid://ux6ivcx1ovdp" path="res://Particles/booster_particles.tscn" id="5_sweqy"]
[ext_resource type="PackedScene" uid="uid://dcecb8hw7dbrv" path="res://Particles/explosion_particles.tscn" id="6_2hs0m"]
[ext_resource type="PackedScene" uid="uid://jfwajmrh6ca7" path="res://Particles/success_particles.tscn" id="7_1jxqw"]
[ext_resource type="Material" uid="uid://chipcliyp3qdo" path="res://ShipRedMaterial.tres" id="8_dw050"]

[sub_resource type="CylinderMesh" id="CylinderMesh_4flbx"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_4flbx"]

[sub_resource type="CylinderMesh" id="CylinderMesh_1jxqw"]
top_radius = 0.2
bottom_radius = 0.2
height = 1.5

[sub_resource type="CylinderMesh" id="CylinderMesh_dw050"]
top_radius = 0.0
bottom_radius = 0.2
height = 0.5

[sub_resource type="CylinderMesh" id="CylinderMesh_b26j0"]
top_radius = 0.25
bottom_radius = 0.25
height = 0.25

[sub_resource type="CylinderMesh" id="CylinderMesh_n7ghd"]
top_radius = 0.25
bottom_radius = 0.25
height = 0.4

[sub_resource type="BoxMesh" id="BoxMesh_nvl01"]
size = Vector3(0.2, 0.4, 0.2)

[sub_resource type="CylinderMesh" id="CylinderMesh_ivps1"]
top_radius = 0.15
bottom_radius = 0.15
height = 0.4

[sub_resource type="TorusMesh" id="TorusMesh_urp6f"]
inner_radius = 0.4
outer_radius = 0.5

[node name="Player" type="RigidBody3D"]
axis_lock_linear_z = true
axis_lock_angular_x = true
axis_lock_angular_y = true
contact_monitor = true
max_contacts_reported = 10
linear_damp = 1.0
angular_damp = 3.0
script = ExtResource("1_4flbx")
thrust = 2000.0
torque_trust = 200.0

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
visible = false
mesh = SubResource("CylinderMesh_4flbx")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CylinderShape3D_4flbx")

[node name="ExplosionAudio" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("2_onrkg")

[node name="SuccessAudio" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("3_i3pqv")

[node name="RocketAudio" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("4_hqtel")

[node name="ExhaustCenter" parent="." instance=ExtResource("5_sweqy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)

[node name="ExhaustRight" parent="." instance=ExtResource("5_sweqy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.4, -1, 0)

[node name="ExhaustLeft" parent="." instance=ExtResource("5_sweqy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.4, -1, 0)

[node name="ExplosionParticles" parent="." instance=ExtResource("6_2hs0m")]

[node name="SuccessParticles" parent="." instance=ExtResource("7_1jxqw")]

[node name="Body" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.25, 0)
material_override = ExtResource("8_dw050")
mesh = SubResource("CylinderMesh_1jxqw")

[node name="Cockpit" type="MeshInstance3D" parent="Body"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
material_override = ExtResource("8_dw050")
mesh = SubResource("CylinderMesh_dw050")
skeleton = NodePath("../..")

[node name="Midriff" type="MeshInstance3D" parent="Body"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.25, 0)
material_override = ExtResource("8_dw050")
mesh = SubResource("CylinderMesh_b26j0")

[node name="Thruster" type="MeshInstance3D" parent="Body"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5463921, 0)
material_override = ExtResource("8_dw050")
mesh = SubResource("CylinderMesh_n7ghd")

[node name="LeftArm" type="MeshInstance3D" parent="Body"]
transform = Transform3D(0.70710677, 0.70710677, 0, -0.70710677, 0.70710677, 0, 0, 0, 1, -0.2402044, -0.16109723, 0)
material_override = ExtResource("8_dw050")
mesh = SubResource("BoxMesh_nvl01")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Body/LeftArm"]
transform = Transform3D(0.70710677, -0.70710677, 0, 0.70710677, 0.70710677, 0, 0, 0, 1, 0.058997452, -0.3180563, 0)
material_override = ExtResource("8_dw050")
mesh = SubResource("CylinderMesh_ivps1")

[node name="RightArm" type="MeshInstance3D" parent="Body"]
transform = Transform3D(-0.7071067, -0.7071067, -8.742277e-08, -0.7071067, 0.7071067, 0, 6.181723e-08, 6.181723e-08, -0.99999994, 0.24, -0.161, 0)
material_override = ExtResource("8_dw050")
mesh = SubResource("BoxMesh_nvl01")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Body/RightArm"]
transform = Transform3D(0.70710677, -0.70710677, 0, 0.70710677, 0.70710677, 0, 0, 0, 1, 0.058997452, -0.3180563, 0)
material_override = ExtResource("8_dw050")
mesh = SubResource("CylinderMesh_ivps1")

[node name="BaseRing" type="MeshInstance3D" parent="Body"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.47306895, 0)
material_override = ExtResource("8_dw050")
mesh = SubResource("TorusMesh_urp6f")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
